--- a/festivals.html
+++ b/festivals.html
@@ -102,7 +102,7 @@
             <h3>جشن بُزکشی  </h3>
             <p>بُزکشی یکی از مهم‌ترین بازی‌های سنتی مردم فاریاب است که معمولاً در جشن‌های بزرگ مثل نوروز یا مراسم‌های عروسی برگزار می‌شود. در این مسابقه، سوارکاران حرفه‌ای تلاش می‌کنند لاشه یک بز را بردارند و به نقطه مشخصی برسانند. این مسابقه قدرت، مهارت و شجاعت سوارکاران را نشان می‌دهد.</p>
         </section>
-        <img src="download8.jpg" alt="">
+        <img src="image/images 3.jpeg" alt="">
         <section>
             <h3>جشن اولین برف (برف‌جشن)</h3>
             <p>در برخی مناطق کوهستانی فاریاب، مردم اولین بارش برف را جشن می‌گیرند. در این روز:
