--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <p>سرزمین فرهنگ، تاریخ و طبیعت زیبا</p>
     </section>
  <div class="image- container">
-    <img src="images.jpg" alt="" class="main-image">
+     <img src="image/images 3.jpeg" alt="">
 </div>
     <section class="content">
         <h2>معرفی ولایت فاریاب</h2>
