--- a/gallery.html
+++ b/gallery.html
@@ -24,12 +24,12 @@
         <h2>گالری تصاویر</h2>
         <p> </p>
         <div class="gallery-container">
-            <img src="image/images.jpeg" alt=" lovley Faryab">
-            <img src="image/images 1.jpeg" alt="Faryab">
-            <img src="image/images 2.jpeg" alt="">
-            <img src="image/images 3.jpeg" alt="">
-            <img src="image/images 4.jpeg" alt="">
-            <img src="image/images 5.jpeg" alt="">
+            <img src="images.jpeg" alt=" lovley Faryab">
+            <img src="images 1.jpeg" alt="Faryab">
+            <img src="images 2.jpeg" alt="">
+            <img src="images 3.jpeg" alt="">
+            <img src="images 4.jpeg" alt="">
+            <img src="images 5.jpeg" alt="">
         </div>
 
         <h2>ویدیوها</h2>
